--- a/src/vista/FrmCliente.form
+++ b/src/vista/FrmCliente.form
@@ -280,6 +280,7 @@
             </Property>
             <Property name="doubleBuffered" type="boolean" value="true"/>
             <Property name="enabled" type="boolean" value="false"/>
+            <Property name="focusCycleRoot" type="boolean" value="true"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[900, 80]"/>
             </Property>
