--- a/src/vista/FrmFactura.form
+++ b/src/vista/FrmFactura.form
@@ -43,16 +43,16 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="lblNombre1" alignment="0" pref="76" max="32767" attributes="0"/>
-                                  <Component id="lblFecha" max="32767" attributes="0"/>
+                                  <Component id="lblNombre1" alignment="0" pref="94" max="32767" attributes="0"/>
                                   <Component id="lblNombre2" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblNombre3" min="-2" pref="101" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="lblNombre3" pref="101" max="32767" attributes="0"/>
                                   <Component id="lblId" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblFecha" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace pref="33" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -120,8 +120,8 @@
                       <Component id="lblNombre4" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                       <Component id="txtTotalaPagar" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="lblFecha" max="32767" attributes="0"/>
                   <Component id="txtFecha" max="32767" attributes="0"/>
+                  <Component id="lblFecha" max="32767" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -166,7 +166,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="lblFecha">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Fecha"/>
+        <Property name="text" type="java.lang.String" value="Fecha Creacion"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -221,6 +221,10 @@
       </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="txtFecha">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFechaActionPerformed"/>
       </Events>
